--- a/search-results.html
+++ b/search-results.html
@@ -35,6 +35,7 @@
     </header>
     <main>
         <section class="section5">
+            <img src="" alt="" class="spinner"> 
             <p class="resultado7"></p>
             <article class="oops">
             
