--- a/search-results.html
+++ b/search-results.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="section5">
-        <article class="spinner9">
+        <article class="spinner">
         
          </article>
             <p class="resultado7"></p>
