playlisttt ayudita macaale

--- a/playlists.html
+++ b/playlists.html
@@ -39,7 +39,13 @@
                 <article class="containerpl">
                     
                 </article>
-            <h5> <a href= "canciones.html">Agregar canciones a mi playlist</a> <a class="vaciar"> Vaciar mi playlist </a></h5>
+                <h2 style="display:none" class="upsi">¡Qué pena! Tu playlist se encuentra vacía</h2>
+                <h3>
+                    <a style="display:none" class="agregar titulos" href= "canciones.html">Agregar canciones a mi playlist</a> 
+                </h3>
+                <h5>
+                    <a class="vaciar" href=""> Vaciar mi playlist </a>
+                   </h5>
             <h2 class="titulos"> <a href="canciones.html" class="titulos">Sugerencias</a></h2>
             <article class="listas">
                 <!-- aca sugerencias -->
